Corrigido validação do PUT e adição do PATCH.
